--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>Talkitout</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="origin-trial" content="AtZbvSCVDbgiEg+gCvCjSPIInKNKAyYukZ95yQddQYs/UBsVITehfPZgGhWRzuajA6IcxWUdCmywCaa/kzADfwAAAABMeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjQyMDAiLCJmZWF0dXJlIjoiV2ViQ29kZWNzIiwiZXhwaXJ5IjoxNjM4NDAzMTk5fQ==">
+  <meta http-equiv="origin-trial" content="AgAic6HENnqj4hsRYf+1LRcFqNAsfv2dSEggWjMna8U/hHV3ml5e9t15z7CJVW5aR8D0apLVJ6U7pVvvjI/c6AwAAABSeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjQyMDAiLCJmZWF0dXJlIjoiV2ViQXNzZW1ibHlTaW1kIiwiZXhwaXJ5IjoxNjQ5ODA3OTk5fQ==">
+  <meta http-equiv="origin-trial" content="ApyVT4vdDQ2PN5yQqMSXhvMcsy+NmU9sqqL1DPdIqlpPGL6WWugX8+YgTnHffT8hONiejdepUc++1KeguWH55AQAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjQyMDAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2Mzk1MjYzOTl9">
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
