--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="origin-trial" content="AtZbvSCVDbgiEg+gCvCjSPIInKNKAyYukZ95yQddQYs/UBsVITehfPZgGhWRzuajA6IcxWUdCmywCaa/kzADfwAAAABMeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjQyMDAiLCJmZWF0dXJlIjoiV2ViQ29kZWNzIiwiZXhwaXJ5IjoxNjM4NDAzMTk5fQ==">
   <meta http-equiv="origin-trial" content="AgAic6HENnqj4hsRYf+1LRcFqNAsfv2dSEggWjMna8U/hHV3ml5e9t15z7CJVW5aR8D0apLVJ6U7pVvvjI/c6AwAAABSeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjQyMDAiLCJmZWF0dXJlIjoiV2ViQXNzZW1ibHlTaW1kIiwiZXhwaXJ5IjoxNjQ5ODA3OTk5fQ==">
   <meta http-equiv="origin-trial" content="ApyVT4vdDQ2PN5yQqMSXhvMcsy+NmU9sqqL1DPdIqlpPGL6WWugX8+YgTnHffT8hONiejdepUc++1KeguWH55AQAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjQyMDAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2Mzk1MjYzOTl9">
+  <meta http-equiv="origin-trial" content="AmnhgElfz+j6f1BvQtutli1VIKUk4b/yM/6KHqSYY59luaOgvNDbAoJTSdnuDuoxiJz+SaE232esEWsphfXRjQIAAAB4eyJvcmlnaW4iOiJodHRwczovL3NvdXJjZS56b29tLnVzOjQ0MyIsImZlYXR1cmUiOiJVbnJlc3RyaWN0ZWRTaGFyZWRBcnJheUJ1ZmZlciIsImV4cGlyeSI6MTYzOTUyNjM5OSwiaXNTdWJkb21haW4iOnRydWV9">
   
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
